ferritin/src/snapshots/ferritin__tests__get_trait_implementor_bounds_json.snap
---
source: ferritin/src/tests.rs
expression: "render_json_for_tests_rooted(Commands::get(\"crate::implementors::Reactor\"), &\nget_fixture_crate_path ())"
---
{
  "canonicalUrl": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/implementors/trait.Reactor.html",
  "meta": {
    "name": "Reactor",
    "kind": "trait",
    "visibility": "public",
    "definedAt": "fixture_crate::implementors::Reactor",
    "crateName": "fixture-crate",
    "crateVersion": "0.1.0"
  },
  "docs": [
    {
      "type": "truncatedBlock",
      "nodes": [
        {
          "type": "paragraph",
          "spans": [
            {
              "text": "The trait whose implementors exercise bound display.",
              "style": "Plain"
            }
          ]
        }
      ],
      "level": "Full"
    }
  ],
  "body": {
    "kind": "trait",
    "name": "Reactor",
    "implementors": [
      {
        "forType": [
          {
            "text": "&",
            "style": "Operator"
          },
          {
            "text": "'static",
            "style": "Lifetime"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Nested",
            "style": "TypeName",
            "path": "fixture_crate::implementors::Nested"
          },
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "T",
            "style": "Generic"
          },
          {
            "text": ">",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "where",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "T",
            "style": "Generic"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Reactor",
            "style": "TypeName",
            "path": "fixture_crate::implementors::Reactor"
          }
        ]
      },
      {
        "forType": [
          {
            "text": "&",
            "style": "Operator"
          },
          {
            "text": "'static",
            "style": "Lifetime"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "str",
            "style": "TypeName"
          }
        ]
      },
      {
        "forType": [
          {
            "text": "(",
            "style": "Punctuation"
          },
          {
            "text": ")",
            "style": "Punctuation"
          }
        ]
      },
      {
        "forType": [
          {
            "text": "(",
            "style": "Punctuation"
          },
          {
            "text": "A",
            "style": "Generic"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Reactor",
            "style": "TypeName",
            "path": "fixture_crate::implementors::Reactor"
          },
          {
            "text": ",",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "B",
            "style": "Generic"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Reactor",
            "style": "TypeName",
            "path": "fixture_crate::implementors::Reactor"
          },
          {
            "text": ")",
            "style": "Punctuation"
          }
        ]
      },
      {
        "forType": [
          {
            "text": "F",
            "style": "Generic"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Fn",
            "style": "TypeName",
            "path": "core::ops::function::Fn"
          },
          {
            "text": "(",
            "style": "Punctuation"
          },
          {
            "text": "u32",
            "style": "TypeName"
          },
          {
            "text": ")",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "->",
            "style": "Operator"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Out",
            "style": "Generic"
          },
          {
            "text": " + ",
            "style": "Plain"
          },
          {
            "text": "Send",
            "style": "TypeName",
            "path": "core::marker::Send"
          },
          {
            "text": " + ",
            "style": "Plain"
          },
          {
            "text": "Sync",
            "style": "TypeName",
            "path": "core::marker::Sync"
          },
          {
            "text": " + ",
            "style": "Plain"
          },
          {
            "text": "'static",
            "style": "Lifetime"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "where",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Out",
            "style": "Generic"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Reactor",
            "style": "TypeName",
            "path": "fixture_crate::implementors::Reactor"
          }
        ]
      },
      {
        "typeName": "Nested",
        "typeUrl": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/implementors/struct.Nested.html",
        "forType": [
          {
            "text": "Nested",
            "style": "TypeName",
            "path": "fixture_crate::implementors::Nested"
          },
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "Vec",
            "style": "TypeName",
            "path": "alloc::vec::Vec"
          },
          {
            "text": "<",
            "style": "Punctuation"
          },
          {
            "text": "T",
            "style": "Generic"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Reactor",
            "style": "TypeName",
            "path": "fixture_crate::implementors::Reactor"
          },
          {
            "text": ">",
            "style": "Punctuation"
          },
          {
            "text": ">",
            "style": "Punctuation"
          }
        ]
      },
      {
        "typeName": "Simple",
        "typeUrl": "https://docs.rs/fixture-crate/0.1.0/fixture_crate/implementors/struct.Simple.html",
        "forType": [
          {
            "text": "Simple",
            "style": "TypeName",
            "path": "fixture_crate::implementors::Simple"
          }
        ]
      },
      {
        "forType": [
          {
            "text": "[",
            "style": "Punctuation"
          },
          {
            "text": "R",
            "style": "Generic"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "Reactor",
            "style": "TypeName",
            "path": "fixture_crate::implementors::Reactor"
          },
          {
            "text": ";",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "const",
            "style": "Keyword"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "N",
            "style": "Plain"
          },
          {
            "text": ":",
            "style": "Punctuation"
          },
          {
            "text": " ",
            "style": "Plain"
          },
          {
            "text": "usize",
            "style": "TypeName"
          },
          {
            "text": "]",
            "style": "Punctuation"
          }
        ]
      }
    ]
  }
}
