ferritin/src/snapshots/ferritin__tests__get_trait_implementor_bounds_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::implementors::Reactor\"),\nOutputMode :: Plain, & get_fixture_crate_path ())"
---
Item: Reactor
Kind: Trait
Visibility: Public
Defined at: fixture_crate::implementors::Reactor
In crate: fixture-crate (0.1.0)

The trait whose implementors exercise bound display.

trait Reactor { ... }

Implementors (this crate)

&'static str, (), Simple

  ◦ &'static Nested<T> where T: Reactor

  ◦ (A: Reactor, B: Reactor)

  ◦ F: Fn(u32) -> Out + Send + Sync + 'static where Out: Reactor

  ◦ Nested<Vec<T: Reactor>>

  ◦ [R: Reactor; const N: usize]
