ferritin/src/snapshots/ferritin__tests__get_trait_marker_plain_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::Marker\"), OutputMode :: Plain, &\nget_fixture_crate_path ())"
---
Item: Marker
Kind: Trait
Visibility: Public
Defined at: fixture_crate::Marker
In crate: fixture-crate (0.1.0)

A marker trait (no associated items) to exercise the compact implementors list — implementors with no bounds and no assoc types render comma-separated.

trait Marker { ... }

Implementors (this crate)

MarkerOne, MarkerTwo
