ferritin/src/snapshots/ferritin__tests__get_trait_method_agent_mode.snap
---
source: ferritin/src/tests.rs
expression: "render_for_tests_rooted(Commands::get(\"crate::TestTrait::test_method\"),\nOutputMode :: Ai, & get_fixture_crate_path ())"
---
Function test_method (Private)

A method

fn test_method(&self) -> String
